--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
    <li><a href="interests.html">Interests</a></li>
   </ul>
    <!-- End of Navigation code -->
-  <article>
-   <h1>Home Page</h1>
-    <p>This is the Home Page.</p>
-      <img class="center" src="vine.jpg" alt="Vine on Fence">
-  </article>
+    <article>
+      <h1>Hello!</h1>
+      <p>Welcome to my site! My name is Akhil Motiramani, and I am a current sophomore at UNC studying Computer Science. I am minoring in Data Science, and this is my first class at UNC as I am a transfer student! I am from Cary, NC, and along with my three other family members, I have a pet bird named Rio. Before moving to North Carolina in 2011, I used to live in Boston, Massachusetts, and living in both states has given me a very unique experience.</p>
+      <img class="center" src="akhil.jpg" alt="Akhil Motiramani in a suit smiling at the camera with a background of trees">
+     </article>
  <footer>
-  <p>
-   You can put  a copyright or a page-last-updated script or other info here...
-  </p>
+  <p>&copy; Akhil Motiramani. All rights reserved.</p>
  </footer>
 </body>
 </html>
