--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
-  <title>EZ Template Example | Home Page </title>
+<head>
+  <title>EZ Template Example | Home Page</title>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
- </head>
- <body>
+</head>
+<body>
   <!-- Start of Navigation code -->
   <ul class="topnav">
-   <li><a class="active" href="index.html">Home</a></li>
-   <li><a href="about.html">About</a></li>
-   <li><a href="classes.html">Classes</a></li>
-   <li><a href="interests.html">Interests</a></li>
+    <li><a class="active" href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="classes.html">Classes</a></li>
+    <li><a href="interests.html">Interests</a></li>
   </ul>
-   <!-- End of Navigation code -->
-    <article>
-      <h1>Hello!</h1>
-      <p>Welcome to my site! My name is Akhil Motiramani, and I am a current sophomore at UNC studying Computer Science. I am minoring in Data Science, and this is my first class at UNC as I am a transfer student! I am from Cary, NC, and along with my three other family members, I have a pet bird named Rio. Before moving to North Carolina in 2011, I used to live in Boston, Massachusetts, and living in both states has given me a very unique experience.</p>
-      <img class="center" src="akhil.jpg" alt="Akhil Motiramani in a suit smiling at the camera with a background of trees">
-     </article>
- <footer>
-  <p>&copy; Akhil Motiramani. All rights reserved.</p>
- </footer>
+  <!-- End of Navigation code -->
+
+  <article>
+    <h1>Hello!</h1>
+    <p>Welcome to my site! My name is Akhil Motiramani, and I am a current sophomore at UNC studying Computer Science. I am minoring in Data Science, and this is my first class at UNC as I am a transfer student! I am from Cary, NC, and along with my three other family members, I have a pet bird named Rio. Before moving to North Carolina in 2011, I used to live in Boston, Massachusetts, and living in both states has given me a very unique experience.</p>
+    <img class="center" src="akhil.jpg" alt="Akhil Motiramani in a suit smiling at the camera with a background of trees">
+  </article>
+
+  <footer>
+    <p>&copy; Akhil Motiramani. All rights reserved.</p>
+    <p id="modified">Page last modified on: </p> <!-- Add the prefix "Page last modified on: " -->
+    <script>
+      var lastModified = document.lastModified;
+      document.getElementById("modified").innerHTML += lastModified; // Append the last modified date
+    </script>
+  </footer>
 </body>
 </html>
