Updated and added playlist

--- a/about.html
+++ b/about.html
@@ -1,11 +1,48 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title> Akhil Motiramani's Page | About Page </title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8">
+  
 </head>
 <body>
-    
+  <!-- Start of Navigation code -->
+  <ul class="topnav">
+    <li><a href="index.html">Home</a></li>
+    <li><a class ="active" href="about.html">About</a></li>
+    <li><a href="classes.html">Classes</a></li>
+    <li><a href="interests.html">Interests</a></li>
+  </ul>
+  <!-- End of Navigation code -->
+
+  <article>
+    <h1>About me</h1>
+    <p>I am a sophomore in college that is interested in persuing computer science. As a determined student in my academics, I have been fortunate to intern at many various places already to gain exposure in the corporate setting.</p>
+    <!-- <img class="center" src="akhil.jpg" alt="Akhil Motiramani in a suit smiling at the camera with a background of trees"> -->
+
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX5trt9i14X7j?utm_source=generator" width="50%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+</article>
+
+  
+  <footer>
+    <p>&copy; Akhil Motiramani. All rights reserved.</p>
+    <p id="modified">Page last modified on: </p> <!-- Add the prefix "Page last modified on: " -->
+    <script>
+      var lastModified = document.lastModified;
+      document.getElementById("modified").innerHTML += lastModified; // Append the last modified date
+    </script>
+  </footer>
+  <script>
+    var slides = document.getElementsByClassName('slide');
+    var slideIndex = 0;
+  
+  
+  </script>
+  
 </body>
 </html>
