--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>EZ Template Example | Home Page</title>
+  <title> Akhil Motiramani's Page | Home Page </title>
   <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -45,13 +45,13 @@
 
   <div class="slideshow-container">
     <div class="slide">
-      <img src="akhil1.JPG" alt="Slide 1">
+      <img src="images/akhil1.JPG" alt="Akhil Motiramani in a suit smiling at the camera with a background of trees">
     </div>
     <div class="slide">
-      <img src="akhil2.jpg" alt="Slide 2">
+      <img src="images/akhil2.jpg" alt="Akhil Motiramani standing against a wall">
     </div>
     <div class="slide">
-      <img src="akhil3.JPG" alt="Slide 3">
+      <img src="images/akhil3.JPG" alt="Akhil Motiramani in NYC">
     </div>
   </div>
 </article>
