--- a/about.html
+++ b/about.html
@@ -22,6 +22,14 @@
   <article>
     <h1>About me</h1>
     <p>I am a sophomore in college that is interested in persuing computer science. As a determined student in my academics, I have been fortunate to intern at many various places already to gain exposure in the corporate setting.</p>
+    <h2> A few places I have interned are: </h2> 
+    <p><br> * StatProg Inc <br> Summer Data Science Intern 
+      <br> Morgan Stanley in partnership with UpperLine Code <br> Summer Software Engineering Intern
+          <br> Aradhana Aggarwal CPA/PLLC <br> Year-round Accounting/Tax Intern
+          <br> Siemens Healthineers <br> Year-round Finance and Analytics Intern </p>
+    
+    
+
     <!-- <img class="center" src="akhil.jpg" alt="Akhil Motiramani in a suit smiling at the camera with a background of trees"> -->
 
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/37i9dQZF1DX5trt9i14X7j?utm_source=generator" width="50%" height="352" frameborder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
