--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
   
   <footer>
     <p>&copy; Akhil Motiramani. All rights reserved.</p>
+    <a href="mailto: akhil.motiramani@yahoo.com" class="icon solid fa-envelope"><span class="label">Email Me!</span></a>
+
     <p id="modified">Page last modified on: </p> <!-- Add the prefix "Page last modified on: " -->
     <script>
       var lastModified = document.lastModified;
