--- a/about.html
+++ b/about.html
@@ -58,6 +58,7 @@
   
   <footer>
     <p>&copy; Akhil Motiramani. All rights reserved.</p>
+    <a href="mailto: akhil.motiramani@yahoo.com" class="icon solid fa-envelope"><span class="label">Email Me!</span></a>
     <p id="modified">Page last modified on: </p> <!-- Add the prefix "Page last modified on: " -->
     <script>
       var lastModified = document.lastModified;
