--- a/interests.html
+++ b/interests.html
@@ -81,7 +81,7 @@
             <div style="width: 50%;">
               <ul>
                 <span class="company-name">4. Learning new programming tricks and langauges</span><br>
-                <span> <a href="https://www.google.com">Visit my GitHub</a></span> 
+                <span> <a href="https://github.com/akhilmotiramani">Visit my GitHub</a></span> 
               </ul>
             </div>
             
