added more interests

--- a/about.html
+++ b/about.html
@@ -20,11 +20,12 @@
   <!-- End of Navigation code -->
 
   <article>
+    
     <h1>About me</h1>
-    <p>I am a sophomore in college that is interested in persuing computer science. As a determined student in my academics, I have been fortunate to intern at many various places already to gain exposure in the corporate setting.</p>
-    <p>Click below to view my resume!</p>
-    <a style="background:white;" href="/images/Akhil_Motiramani_Resume.pdf" example class="button">My Resume!</a>
-
+<p>I am a sophomore in college who is interested in pursuing computer science. As a determined student in my academics, I have been fortunate to intern at various places to gain exposure in the corporate setting.</p>
+<p>Click below to view my resume!</p>
+<a style="background:white; color:#4B9CD3;" href="/images/Akhil_Motiramani_Resume.pdf" class="button">My Resume!</a>
+<p>Want to contact me? <br> Email: <a href="mailto:akhil.motiramani@yahoo.com" style="color:#4B9CD3;">akhil.motiramani@yahoo.com</a> Phone: <span style="color:#4B9CD3;">(919) 830-8527</span></p>
 
 
     <style>
