Updated images to same size

--- a/about.html
+++ b/about.html
@@ -66,8 +66,8 @@
   
   <footer>
     <p>&copy; Akhil Motiramani. All rights reserved.</p>
-    <a href="mailto: akhil.motiramani@yahoo.com" class="icon solid fa-envelope"><span class="label">Email Me!</span></a>
-    <p id="modified">Page last modified on: </p> <!-- Add the prefix "Page last modified on: " -->
+    <a href="mailto:akhil.motiramani@yahoo.com" class="icon solid fa-envelope"><span class="label">Email Me!</span></a>
+<p id="modified">Page last modified on: </p>
     <script>
       var lastModified = document.lastModified;
       document.getElementById("modified").innerHTML += lastModified; // Append the last modified date
