--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 
   <div class="slideshow-container">
     <div class="slide">
-      <img src="images/akhil1.JPG" alt="Akhil Motiramani in a suit smiling at the camera with a background of trees">
+      <img src="images/akhil1.jpeg" alt="Akhil Motiramani in a suit smiling at the camera with a background of trees">
     </div>
     <div class="slide">
-      <img src="images/akhil2.jpg" alt="Akhil Motiramani standing against a wall">
+      <img src="images/akhil2.jpeg" alt="Akhil Motiramani standing against a wall">
     </div>
     <div class="slide">
-      <img src="images/akhil3.JPG" alt="Akhil Motiramani in NYC">
+      <img src="images/akhil3.jpeg" alt="Akhil Motiramani in NYC">
     </div>
   </div>
 </article>
@@ -59,9 +59,8 @@
   
   <footer>
     <p>&copy; Akhil Motiramani. All rights reserved.</p>
-    <a href="mailto: akhil.motiramani@yahoo.com" class="icon solid fa-envelope"><span class="label">Email Me!</span></a>
-
-    <p id="modified">Page last modified on: </p> <!-- Add the prefix "Page last modified on: " -->
+    <a href="mailto:akhil.motiramani@yahoo.com" class="icon solid fa-envelope"><span class="label">Email Me!</span></a>
+    <p id="modified">Page last modified on: </p>    
     <script>
       var lastModified = document.lastModified;
       document.getElementById("modified").innerHTML += lastModified; // Append the last modified date
